--- a/PanArctic_DSL_remote_sensing.Rmd
+++ b/PanArctic_DSL_remote_sensing.Rmd
@@ -348,33 +348,46 @@ The variables are:
 * vyo: Meridional velocity m/s (y)
 * x: x-coordinate (not longitude, need to be reprojected)
 * y: y-coordinate (not latitude, need to be reprojected)
+* mlotst: mixed layer thickness (m)
+* siconc: sea ice concentration (1)
+* sithick: sea ice thickness (m)
 * depth: depth in meters
 * time: time in hours since 1950-01-01 00:00:00
+* latitude: latitude
+* longitude: longitude
 
-```{r}
-# Read NetCDF
-test <- tidync("data/remote_sensing/physics/20150115_0m_phy_CMEMS.nc") %>%
+
+```{r processing-trial-sf}
+test_ice <- tidync("data/remote_sensing/physics/20150115_222m_phy_CMEMS.nc") %>% # Read sea ice data and mixed layer depth
+  activate("D0,D1,D2") %>%
+  hyper_tibble() 
+test_oce <- tidync("data/remote_sensing/physics/20150115_222m_phy_CMEMS.nc") %>% # Read temperature, salinity, and current velocity
   activate("D0,D1,D3,D2") %>% # D0 = x, D1 = y, D3 = depth, D2 = time
-  hyper_tibble() %>%
-  mutate(date = as.POSIXct(time*3600, origin = "1950-01-01 00:00:00", tz = "UTC"))
+  hyper_tibble()
+test_meta <- tidync("data/remote_sensing/physics/20150115_222m_phy_CMEMS.nc") %>% # Read sea ice data and mixed layer depth
+  activate("D0,D1") %>%
+  hyper_tibble()
 
-# Define projection
-# proj_original <- "+proj=stere +a=6378273.0 +b=6378273.0 +lon_0=-45.0 +lat_0=90.0 +lat_ts=90.0 +ellps=sphere +units=m "
-proj_original <- "+proj=stere +lat_0=90 +lat_ts=90 +lon_0=-45 +x_0=0 +y_0=0 +R=6378273 +units=m"
+test <- left_join(test_ice, test_oce, by = c("x", "y", "time")) %>% # Combine data
+  left_join(., test_meta, by = c("x", "y")) %>%
+  filter(is.na(depth) == F) %>% # Remove data from land or below seafloor
+  mutate(date = as.POSIXct(time*3600, origin = "1950-01-01 00:00:00", tz = "UTC")) %>% # Calculate date
+  rename(lat = latitude, lon = longitude) %>%
+  dplyr::select(-time)
 
+proj_original <- "+proj=stere +a=6378273.0 +b=6378273.0 +lon_0=-45.0 +lat_0=90.0 +lat_ts=90.0 +ellps=sphere +units=m" # Define projection
 
-# Project data
-test_latlon <- SpatialPointsDataFrame(SpatialPoints(cbind(test$x, test$y), proj4string = CRS(proj_original)),
-                                      data.frame(thetao = test$thetao,
-                                                 vxo = test$vxo,
-                                                 vyo = test$vyo,
-                                                 so = test$so,
-                                                 depth = test$depth,
-                                                 time = test$time)) %>%
-  spTransform(., CRSobj = crs("EPSG:4326")) %>%
-  as.data.frame() 
-  
-bbox(test_latlon) # Latitude is off, longitude seems fine
+test_sf <- st_as_sf(test, coords = c("x", "y"), crs = proj_original) # Convert dataframe to sf
+plot(test_sf["thetao"], axes = TRUE)
 
-plot(test_latlon, axes = T)  
+test_sf2 <- st_as_sf(test, coords = c("x", "y"), crs = proj_original) %>% # Convert dataframe to sf
+  st_transform(., crs = "EPSG:4326") # Transform to EPSG:4326
+plot(test_sf2["thetao"], axes = TRUE) # Not working
+
+test_sf3 <- st_as_sf(test, coords = c("lon", "lat"), crs = "EPSG:4326") # Convert dataframe to sf with correct CRS
+plot(test_sf3["thetao"], axes = TRUE) # Work
+
+test_sf4 <- st_as_sf(test, coords = c("lon", "lat"), crs = "EPSG:4326") %>% # Convert dataframe to sf with correct CRS
+  st_transform(., crs = "EPSG:6931") # Convert to EPSG:6931
+plot(test_sf3["thetao"], axes = TRUE) # Work
 ```
