--- a/PanArctic_DSL_remote_sensing.Rmd
+++ b/PanArctic_DSL_remote_sensing.Rmd
@@ -236,7 +236,7 @@ rm(seaice_tmp, seaice_tmp_laea, i, cell_res) # Remove temporary data
 
 Plot mean ice concentration and open water duration per year with the EASE-Grid 2.0 - North projection.
 
-```{r EPSG-6931-map-CTD, message=FALSE, fig.width=8, fig.height=7}
+```{r EPSG-6931-map-seaice, message=FALSE, fig.width=8, fig.height=7}
 coast_10m_laea <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% # Coastline in laea
   spTransform(CRSobj = crs("EPSG:4326")) %>% # Make sure that the shapefile is in the right projection
   crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
@@ -458,4 +458,85 @@ phy %>%
               pivot = 0, preserve.dir = TRUE, direction = "ccw") +
   scale_fill_cmocean(name = "speed") +
   coord_cartesian()
+```
+
+### EPSG:6931 - EASE-Grid 2.0 North (Lambert's equal-area, azimuthal)
+
+Data is projected on the EPSG:6931 projection. 
+
+```{r EPSG-6931-physics-grid}
+cell_res <- 150 # Cell resolution in km
+arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
+projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) # Convert proj unit from m to km
+res(arctic_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
+
+phy_grid_laea <- data.frame() # Empty dataframe
+
+for (i in seq(2015, 2017, 1)) { # Loop through each year
+  for (j in c(0, 222, 380, 644, 1062)) { # Loop through each depth bin
+    phy_year_tmp <- phy_year %>%
+      filter(year == i & depth == j) # Select depth bin
+    # Rasterize data in laea
+    phy_tmp_laea <- SpatialPointsDataFrame(SpatialPoints(cbind(phy_year_tmp$lon, phy_year_tmp$lat),
+                                                         proj4string = CRS("EPSG:4326")), 
+                                           data.frame(lat = phy_year_tmp$lat,
+                                                      lon = phy_year_tmp$lon,
+                                                      depth = phy_year_tmp$depth,
+                                                      mlotst = phy_year_tmp$mlotst,
+                                                      siconc = phy_year_tmp$siconc,
+                                                      sithick = phy_year_tmp$sithick,
+                                                      thetao = phy_year_tmp$thetao,
+                                                      so = phy_year_tmp$so,
+                                                      velocity = phy_year_tmp$velocity,
+                                                      vxo = phy_year_tmp$vxo,
+                                                      vyo = phy_year_tmp$vyo)) %>%
+      spTransform(., CRSobj = crs(arctic_laea)) %>% # Change projection to EPSG:6931
+      rasterize(., arctic_laea, fun = mean, na.rm = T) %>% # Rasterize on the arctic_laea grid (with correct grid resolution)
+      dropLayer(1) %>% # Remove ID layer
+      rasterToPoints() %>% # Convert raster to data frame
+      as.data.frame() %>%
+      rename(xc = x, yc = y) %>% # Rename variables
+      mutate(year = i, 
+             depth = j,
+             area = factor(case_when(lon > -155 & lon <= -95 & lat > 65 & lat <= 82 ~ "BF_CAA",
+                                     lon > -95 & lon <= -50 & lat > 66 & lat <= 82 ~ "BB",
+                                     lon >= -25 & lon <= 145 & lat > 77 & lat <= 90 ~ "SV"),
+                           levels = c("BF_CAA", "BB", "SV"))) %>%
+      dplyr::select(year, area, lat, lon, xc, yc, depth, mlotst, siconc, sithick, thetao, so, velocity, vxo, vyo) 
+    phy_grid_laea <- bind_rows(phy_grid_laea, phy_tmp_laea)
+  }
+}
+
+rm(phy_year_tmp, phy_tmp_laea, i, j) # Remove temporary data
+
+phy_grid_laea <- phy_grid_laea %>%
+  mutate(cell_res = cell_res) # Add cell resolution to dataframe
+```
+
+Gridding worked correctly.
+
+```{r EPSG-6931-map-physics, message=FALSE, fig.height=10, fig.width=6}
+coast_10m_laea <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% # Coastline in laea
+  spTransform(CRSobj = crs("EPSG:4326")) %>% # Make sure that the shapefile is in the right projection
+  crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
+  spTransform(CRSobj = crs(arctic_laea)) %>% # Project shapefile in laea
+  fortify() %>% # Convert to a dataframe for ggplot
+  rename(xc = long, yc = lat)
+
+phy_grid_laea %>% # Map current velocity at 222 m
+  # filter(depth == 222) %>% # Select depth bin
+  ggplot() +
+  geom_tile(aes(x = xc, y = yc, fill = velocity)) +
+  scale_fill_cmocean("EPSG:6931 - Current velocity(m/s)", name = "speed") +
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
+  facet_grid(depth ~ year) +
+  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
+  theme(legend.position = "top", legend.key.height = unit(0.1, "in"), legend.key.width = unit(0.3, "in"),
+        axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
+```
+
+# Save data 
+
+```{r save-data}
+save(phy_grid_laea, file = "data/remote_sensing/physics_grids.RData") # Save data
 ```
