Add Spearman correlation plots.

--- a/PanArctic_DSL_statistics.Rmd
+++ b/PanArctic_DSL_statistics.Rmd
@@ -19,6 +19,7 @@ library(ggfortify)    # Plotting glm
 library(RColorBrewer) # Diverging colour palettes
 library(cmocean)      # Oceanographic colour palettes
 library(moments)      # Overlay distributions
+library(ggcorrplot)   # Correlation plots
 # Custom figure theme
 theme_set(theme_bw())
 theme_update(axis.text = element_text(size = 9),
@@ -37,7 +38,7 @@ I want to test whether temperature and salinity at mesopelagic depth, sea-ice co
 
 ```{r data-loading, message=FALSE}
 # Map projections
-cell_res <- 100 # Cell resolution in km
+cell_res <- 150 # Cell resolution in km
 arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
 projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) # Convert proj unit from m to km
 res(arctic_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
@@ -62,7 +63,8 @@ coast_10m_laea <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% # Coast
 # Gridded acoustic, CTD, and sea ice data
 load("data/acoustics/SA_grids.RData") # Acoustic data
 # load("data/CTD/CTD_grids.RData") # CTD data
-load("data/remote_sensing/physics_grids.RData") # Remote sensing sea ice data
+load("data/remote_sensing/physics_grids.RData") # Modelled physics data 
+load("data/remote_sensing/seaice_grids.RData") # Remote sensing sea ice data
 
 rm(list = ls(pattern = "latlon")) # Remove EPSG:4326 files
 ```
@@ -80,7 +82,7 @@ phy_laea <- phy_grid_laea %>% # Tidy remote sensing dataset for joining
   dplyr::select(-lat, -lon)
 
 stat_laea <- left_join(SA_laea, phy_laea, by = c("year", "area", "xc", "yc", "cell_res")) %>% # Join acoustic and seaice
-  filter(depth == 222) %>% # Select data at 222 m depth
+  filter(depth == 380) %>% # Select data at 222 m depth
   mutate(SA_int = 10 * log10(NASC_int))
 ```
 
@@ -141,7 +143,7 @@ stat_laea %>% # Ice concentration
   geom_tile(aes(fill = velocity), color = "grey30") +
   scale_fill_cmocean("velo (m/s)", name = "speed", na.value = "red") +
   facet_wrap(~ year, ncol = 3) +
-  ggtitle("Current velocity at 222 m depth") +
+  ggtitle("Current velocity at 380 m depth") +
   coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
   theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
 ```
@@ -184,44 +186,19 @@ stat_laea %>% # Ice concentration
 
 ## Data exploration
 
-```{r scatterplots, eval=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
-plot_grid(stat_laea %>%
-            ggplot(aes(x = cons_temp, y = NASC_anomaly)) +
-            geom_point(alpha = 0.5) +
-            # stat_smooth(method = "lm", se = F) +
-            scale_x_continuous("Temperature (°C)") +
-            scale_y_continuous("Sa anomaly"),
-          stat_laea %>%
-            ggplot(aes(x = abs_sal, y = NASC_anomaly)) +
-            geom_point(alpha = 0.5) +
-            # stat_smooth(method = "lm", se = F) +
-            scale_x_continuous("Salinity (g/kg)") +
-            scale_y_continuous("Sa anomaly"),
-          stat_laea %>%
-            ggplot(aes(x = openwater_duration, y = NASC_anomaly)) +
-            geom_point(alpha = 0.5) +
-            # stat_smooth(method = "lm", se = F) +
-            scale_x_continuous("Open water (days)") +
-            scale_y_continuous("Sa anomaly"),
-          stat_laea %>%
-            ggplot(aes(x = mean_ice_conc, y = NASC_anomaly)) +
-            geom_point(alpha = 0.5) +
-            # stat_smooth(method = "lm", se = F) +
-            scale_x_continuous("Mean ice conc (%)") +
-            scale_y_continuous("Sa anomaly"),
-          ncol = 2, align = "hv", axis = "tblr")
+First I check the general correlation for the entire data set and then I check whether there are correlations within each cell.
+
+```{r corr-calculations}
+corr <- stat_laea %>% # Compute Spearman correlation matrix
+  dplyr::select(NASC_int, SA_int, NASC_anomaly, thetao, so, velocity, mlotst, siconc, sithick) %>%
+  cor(., method = "spearman") %>%
+  round(., 2)
+corr_pvalues <- stat_laea %>% # Compute Spearman correlation matrix p-values
+  dplyr::select(NASC_int, SA_int, NASC_anomaly, thetao, so, velocity, mlotst, siconc, sithick) %>%
+  cor_pmat(., method = "spearman") 
 ```
 
-```{r distribution-response, eval=FALSE}
-stat_laea %>%
-  ggdensity(x = "NASC_anomaly", fill = "lightgray") +
-  stat_overlay_normal_density(color = "red", linetype = "dashed")
-stat_laea %>%
-  ggdensity(x = "NASC_int", fill = "lightgray") +
-  stat_overlay_normal_density(color = "red", linetype = "dashed")
-stat_laea %>%
-  mutate(SA_int = 10 * log10(NASC_int)) %>%
-  ggdensity(x = "SA_int", fill = "lightgray") +
-  stat_overlay_normal_density(color = "red", linetype = "dashed")
+```{r corr-plot}
+ggcorrplot(corr, type = "lower", p.mat = corr_pvalues)
 ```
 
