cell resolution to 100 km

--- a/PanArctic_DSL_remote_sensing.Rmd
+++ b/PanArctic_DSL_remote_sensing.Rmd
@@ -197,7 +197,7 @@ To match sea ice records with acoustic data, I rasterized sea ice data on the sa
 More info on this projection can be found on the [NSIDC website](https://nsidc.org/data/ease/). Because "raw" sea ice data has a 25 km * 25 km resolution, I match that resolution to the final projection (150 km * 150 km).
 
 ```{r EPSG-6931-seaice-grid}
-cell_res <- 50 # Cell resolution in km
+cell_res <- 100 # Cell resolution in km
 arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
 projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) # Convert proj unit from m to km
 res(arctic_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
@@ -456,10 +456,10 @@ phy %>%
 
 ### EPSG:6931 - EASE-Grid 2.0 North (Lambert's equal-area, azimuthal)
 
-Data is projected on the EPSG:6931 projection. 
+Data is projected on the EPSG:6931 projection. I also calculate temperature (x - mean(x over the whole time series) and current anomalies. 
 
 ```{r EPSG-6931-physics-grid}
-cell_res <- 50 # Cell resolution in km
+cell_res <- 100 # Cell resolution in km
 arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
 projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) # Convert proj unit from m to km
 res(arctic_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
@@ -504,7 +504,14 @@ for (i in seq(2015, 2017, 1)) { # Loop through each year
 rm(phy_year_tmp, phy_tmp_laea, i, j) # Remove temporary data
 
 phy_grid_laea <- phy_grid_laea %>%
-  mutate(cell_res = cell_res) # Add cell resolution to dataframe
+  group_by(depth, area) %>%
+  mutate(cell_res = cell_res, # Add cell resolution to dataframe
+         mean_temp_area_depth = mean(thetao),
+         mean_velo_area_depth = mean(velocity)) %>%
+  ungroup() %>%
+  mutate(temp_anomaly = thetao - mean_temp_area_depth,
+         velocity_anomaly = velocity - mean_velo_area_depth) %>%
+  ungroup()
 ```
 
 Gridding worked correctly.
