--- a/PanArctic_DSL_acoustics.Rmd
+++ b/PanArctic_DSL_acoustics.Rmd
@@ -13,6 +13,7 @@ always_allow_html: true
 library(tidyverse)    # Tidy code
 library(cowplot)      # Plots on a grid
 library(raster)       # Data gridding
+library(sf)           # Spatial data
 library(rgdal)        # Read shapefiles
 library(cmocean)      # Oceanographic color palettes
 library(RColorBrewer) # Diverging color palette
@@ -31,6 +32,33 @@ theme_update(axis.text = element_text(size = 9),
 options(dplyr.summarise.inform = F) # Suppress summarise() warning
 ```
 
+I use the area definitions from IHO Sea Areas (International Hydrographic Organization) to combine data.
+
+```{r IHO-regions-and-projections}
+# Projections
+arctic_latlon <- raster(extent(-155, 35, 66, 85), # Base projection for acoustic and CTD data
+                        crs = "EPSG:4326", 
+                        res = c(2, 1)) # cells of 2 degree longitude per 1 degree latitude
+arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
+projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) # Convert proj unit from m to km
+cell_res <- 100 # Cell resolution in km
+res(arctic_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
+
+# IHO areas
+# sf::sf_use_s2(T) # Turn off s2 processing
+IHO_sf_latlon <- read_sf("data/arctic_regions/World_Seas_IHO_v3.shp") %>%
+  filter(ID %in% c("5", "13", "14", "14A", "15", "17")) %>% # Filter for relevant regions
+  st_transform(crs = crs(arctic_latlon)) %>%
+  st_make_valid() %>% # Correct invalid polygons
+  filter(st_is_valid(.) == TRUE)
+IHO_sf_laea <- read_sf("data/arctic_regions/World_Seas_IHO_v3.shp") %>%
+  filter(ID %in% c("5", "13", "14", "14A", "15", "17")) %>% # Filter for relevant regions
+  st_transform(crs = crs(arctic_latlon)) %>%
+  st_transform(crs = crs(arctic_laea)) %>%
+  st_make_valid() %>% # Correct invalid polygons
+  filter(st_is_valid(.) == TRUE) 
+```
+
 # Integrated s~A~ and centre of mass
 
 Acoustic data were collected continuously at 38 kHz. We selected data when the ship were stationary (< 1 knot). To match acoustic records to CTD and remote sensing data, and to homogenize data spatio-temporally, I rasterized acoustic data per year. I used two different grids; the WGS84 projection (EPSG:4326) with grid cells of 2°lon x 1°lat, and the EASE-Grid 2.0 North (EPSG:6931)—which is the default grid for sea-ice data—with grid cells of 150 km x 150 km. For each cell I calculated the mean integrated nautical area scattering coefficient (s~A~; m^2^ nmi^-2^) and centre of mass over mesopelagic depths (200-1000 m). Then, I calculated the normalized backscatter anomaly for each grid cell per area—Beaufort Sea and Canadian Arctic Archipelago, Baffin Bay, and Svalbard—per year.
@@ -42,10 +70,6 @@ load("data/acoustics/MVBS_2015_2017.RData") # Acoustic data
 ## 2D Integrated backscatter - EPSG:4326 - WGS84 projection 
 
 ```{r EPSG-4326-acoustic-grid}
-arctic_latlon <- raster(extent(-155, 35, 66, 85), # Base projection for acoustic and CTD data
-                        crs = "EPSG:4326", 
-                        res = c(2, 1)) # cells of 2 degree longitude per 1 degree latitude
-
 SA_grid_latlon <- data.frame() # Empty dataframe that will be filled with gridded CTD data
 
 for (i in seq(2015, 2017, 1)) { # Data gridding
@@ -87,7 +111,16 @@ SA_grid_latlon <- SA_grid_latlon %>% # Calculate normalized backscatter anomalie
                                            NASC_anomaly > 0.5 & NASC_anomaly <= 1 ~ "]0.5;1]",
                                            NASC_anomaly > 1 ~ ">1"),
                                            levels = c("<-1", "[-1;-0.5[", "[-0.5;0.5]", "]0.5;1]", ">1"))) %>%
-  ungroup()
+  ungroup() %>%
+  st_as_sf(coords = c("lon", "lat"), crs = st_crs(arctic_latlon), remove = F) %>%
+  st_join(., IHO_sf_latlon, join = st_within) %>%
+  st_drop_geometry() %>%
+  mutate(NAME = if_else(is.na(NAME) == T & lon > -100 & lat < 70, "Davis Strait",
+                if_else(is.na(NAME) == T & lon > -100 & lat > 70, "Baffin Bay",
+                if_else(is.na(NAME) == T & lon < -100, "The Northwestern Passages", NAME)))) %>%
+  rename(IHO_area = NAME, area = area.x) %>%
+  dplyr::select(year, lat, lon, IHO_area, area, NASC_int, CM, mean_NASC_area_year, sd_NASC_area_year, 
+                NASC_anomaly, NASC_anomaly_d)
 ```
 
 Plot mesopelagic normalized s~A~ anomalies and centre of mass with the WGS84 projection.
@@ -137,11 +170,6 @@ plot_grid(SA_grid_latlon %>% # Map integrated normalized backscatter anomaly
 More info on this projection can be found on the [NSIDC website](https://nsidc.org/data/ease/).
 
 ```{r EPSG-6931-acoustic-grid}
-cell_res <- 100 # Cell resolution in km
-arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
-projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) # Convert proj unit from m to km
-res(arctic_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
-
 SA_grid_laea <- data.frame() # Empty dataframe that will be filled with gridded CTD data
 
 for (i in seq(2015, 2017, 1)) { # Data gridding
@@ -184,7 +212,15 @@ SA_grid_laea <- SA_grid_laea %>% # Calculate normalized backscatter anomalies
                                            NASC_anomaly > 0.5 & NASC_anomaly <= 1 ~ "]0.5;1]",
                                            NASC_anomaly > 1 ~ ">1"),
                                            levels = c("<-1", "[-1;-0.5[", "[-0.5;0.5]", "]0.5;1]", ">1"))) %>%
-  ungroup()
+  ungroup() %>%
+  st_as_sf(coords = c("xc", "yc"), crs = st_crs(arctic_laea), remove = F) %>%
+  st_join(., IHO_sf_laea, join = st_within) %>%
+  st_drop_geometry() %>%
+  mutate(NAME = if_else(is.na(NAME) == T & yc < 0, "Baffin Bay",
+                if_else(is.na(NAME) == T & yc > 0 & lat > 70, "The Northwestern Passages", NAME))) %>%
+  rename(IHO_area = NAME, area = area.x) %>%
+  dplyr::select(year, xc, yc, lon, lat, IHO_area, area, NASC_int, CM, mean_NASC_area_year, sd_NASC_area_year,
+                NASC_anomaly, NASC_anomaly_d, cell_res)
 ```
 
 Plot mesopelagic normalized s~A~ anomalies and centre of mass with the EASE-Grid 2.0 North. 
@@ -229,11 +265,6 @@ plot_grid(SA_grid_laea %>% # Map integrated normalized backscatter anomaly
 More info on this projection can be found on the [NSIDC website](https://nsidc.org/data/ease/).
 
 ```{r 3D-EPSG-6931-acoustic-grid}
-cell_res <- 100 # Cell resolution in km
-arctic_sv_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
-projection(arctic_sv_laea) <- gsub("units=m", "units=km", projection(arctic_sv_laea)) # Convert proj unit from m to km
-res(arctic_sv_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
-
 Sv_grid_laea <- data.frame() # Empty dataframe that will be filled with gridded CTD data
 
 for (i in seq(2015, 2017, 1)) { # Loop through every year
@@ -246,8 +277,8 @@ for (i in seq(2015, 2017, 1)) { # Loop through every year
     Sv_tmp_0.05 <- SpatialPointsDataFrame(SpatialPoints(cbind(Sv_tmp$lon, Sv_tmp$lat), 
                                                         proj4string = CRS("EPSG:4326")),
                                           data.frame(sv_lin = Sv_tmp$sv_lin)) %>%
-      spTransform(., CRSobj = crs(arctic_sv_laea)) %>% # Change projection to EPSG:6931
-      rasterize(., arctic_sv_laea, fun = function(x, ...) {quantile(unique(na.omit(x)), 0.05)}, na.rm = F) %>% 
+      spTransform(., CRSobj = crs(arctic_laea)) %>% # Change projection to EPSG:6931
+      rasterize(., arctic_laea, fun = function(x, ...) {quantile(unique(na.omit(x)), 0.05)}, na.rm = F) %>% 
       dropLayer(1) %>% # Remove ID layer
       rasterToPoints() %>% # Convert raster to data frame
       as.data.frame() %>%
@@ -257,8 +288,8 @@ for (i in seq(2015, 2017, 1)) { # Loop through every year
     Sv_tmp_0.25 <- SpatialPointsDataFrame(SpatialPoints(cbind(Sv_tmp$lon, Sv_tmp$lat), 
                                                         proj4string = CRS("EPSG:4326")),
                                           data.frame(sv_lin = Sv_tmp$sv_lin)) %>%
-      spTransform(., CRSobj = crs(arctic_sv_laea)) %>% # Change projection to EPSG:6931
-      rasterize(., arctic_sv_laea, fun = function(x, ...) {quantile(unique(na.omit(x)), 0.25)}, na.rm = F) %>% 
+      spTransform(., CRSobj = crs(arctic_laea)) %>% # Change projection to EPSG:6931
+      rasterize(., arctic_laea, fun = function(x, ...) {quantile(unique(na.omit(x)), 0.25)}, na.rm = F) %>% 
       dropLayer(1) %>% # Remove ID layer
       rasterToPoints() %>% # Convert raster to data frame
       as.data.frame() %>%
@@ -270,8 +301,8 @@ for (i in seq(2015, 2017, 1)) { # Loop through every year
                                          data.frame(lat = Sv_tmp$lat,
                                                     lon = Sv_tmp$lon,
                                                     sv_lin = Sv_tmp$sv_lin)) %>%
-      spTransform(., CRSobj = crs(arctic_sv_laea)) %>% # Change projection to EPSG:6931
-      rasterize(., arctic_sv_laea, fun = function(x, ...) {quantile(unique(na.omit(x)), 0.5)}, na.rm = F) %>% 
+      spTransform(., CRSobj = crs(arctic_laea)) %>% # Change projection to EPSG:6931
+      rasterize(., arctic_laea, fun = function(x, ...) {quantile(unique(na.omit(x)), 0.5)}, na.rm = F) %>% 
       dropLayer(1) %>% # Remove ID layer
       rasterToPoints() %>% # Convert raster to data frame
       as.data.frame() %>%
@@ -281,8 +312,8 @@ for (i in seq(2015, 2017, 1)) { # Loop through every year
     Sv_tmp_0.75 <- SpatialPointsDataFrame(SpatialPoints(cbind(Sv_tmp$lon, Sv_tmp$lat), 
                                                         proj4string = CRS("EPSG:4326")),
                                           data.frame(sv_lin = Sv_tmp$sv_lin)) %>%
-      spTransform(., CRSobj = crs(arctic_sv_laea)) %>% # Change projection to EPSG:6931
-      rasterize(., arctic_sv_laea, fun = function(x, ...) {quantile(unique(na.omit(x)), 0.75)}, na.rm = F) %>% 
+      spTransform(., CRSobj = crs(arctic_laea)) %>% # Change projection to EPSG:6931
+      rasterize(., arctic_laea, fun = function(x, ...) {quantile(unique(na.omit(x)), 0.75)}, na.rm = F) %>% 
       dropLayer(1) %>% # Remove ID layer
       rasterToPoints() %>% # Convert raster to data frame
       as.data.frame() %>%
@@ -292,8 +323,8 @@ for (i in seq(2015, 2017, 1)) { # Loop through every year
     Sv_tmp_0.95 <- SpatialPointsDataFrame(SpatialPoints(cbind(Sv_tmp$lon, Sv_tmp$lat), 
                                                         proj4string = CRS("EPSG:4326")),
                                           data.frame(sv_lin = Sv_tmp$sv_lin)) %>%
-      spTransform(., CRSobj = crs(arctic_sv_laea)) %>% # Change projection to EPSG:6931
-      rasterize(., arctic_sv_laea, fun = function(x, ...) {quantile(unique(na.omit(x)), 0.95)}, na.rm = F) %>% 
+      spTransform(., CRSobj = crs(arctic_laea)) %>% # Change projection to EPSG:6931
+      rasterize(., arctic_laea, fun = function(x, ...) {quantile(unique(na.omit(x)), 0.95)}, na.rm = F) %>% 
       dropLayer(1) %>% # Remove ID layer
       rasterToPoints() %>% # Convert raster to data frame
       as.data.frame() %>%
@@ -307,6 +338,11 @@ for (i in seq(2015, 2017, 1)) { # Loop through every year
     Sv_grid_laea <- bind_rows(Sv_grid_laea, Sv_grid_tmp) # Combine data
   }
 }
+rm(Sv_tmp, Sv_tmp_0.05, Sv_tmp_0.25, Sv_tmp_0.50, Sv_tmp_0.75, Sv_tmp_0.95, Sv_grid_tmp) # Remove temporary data
+
+coord_equivalences <- SA_grid_laea %>% # Calculate coord equivalences between 4326 and 6931
+  group_by(xc, yc, area, IHO_area) %>%
+  summarise()
 
 Sv_grid_laea <- Sv_grid_laea %>% # Tidy data
     mutate(Sv_q0.05 = 10 * log10(sv_lin_q0.05), # Transform into backsattering strengh (log)
@@ -319,12 +355,11 @@ Sv_grid_laea <- Sv_grid_laea %>% # Tidy data
                                    lon >= -25 & lon <= 145 & lat > 77 & lat <= 90 ~ "SV"),
                          levels = c("BF_CAA", "BB", "SV")),
            cell_res = cell_res) %>%
-  # unite(grid_ID, xc, yc, year, sep = "_", remove = F) %>% # Create unique ID for each grid cell
-  dplyr::select(year, area, xc, yc, lon, lat, depth, cell_res,
+  ungroup() %>%
+  left_join(., coord_equivalences, by = c("xc", "yc", "area")) %>%
+  dplyr::select(year, xc, yc, lon, lat, IHO_area, area, depth, cell_res,
                 sv_lin_q0.05, sv_lin_q0.25, sv_lin_q0.50, sv_lin_q0.75, sv_lin_q0.95,
                 Sv_q0.05, Sv_q0.25, Sv_q0.50, Sv_q0.75, Sv_q0.95)
-  
-rm(Sv_tmp, Sv_tmp_0.05, Sv_tmp_0.25, Sv_tmp_0.5, Sv_tmp_0.75, Sv_tmp_0.95, Sv_grid_tmp, cell_res) # Remove temporary data
 ```
 
 Plot S~V~ profiles for each area and year after data gridding.
@@ -333,7 +368,7 @@ Plot S~V~ profiles for each area and year after data gridding.
 col_pal <- c("#80CBB1", "#347BA5", "#302346") # Custom color palette
 
 Sv_grid_laea %>% # Plot median profiles
-  group_by(depth, area, year) %>% # Calculate mean and median Sv profiles per area per year
+  group_by(depth, IHO_area, year) %>% # Calculate mean and median Sv profiles per area per year
   summarise(sv_lin_q0.05_areayear = median(sv_lin_q0.05),
             sv_lin_q0.25_areayear = median(sv_lin_q0.25),
             sv_lin_q0.50_areayear = median(sv_lin_q0.50),
@@ -362,11 +397,11 @@ Sv_grid_laea %>% # Plot median profiles
          Sv_q0.95_median = case_when(Sv_q0.95_median == -999 ~ NaN,
                                      Sv_q0.95_median > -999 & Sv_q0.95_median <= -105 ~ -105,
                                      Sv_q0.95_median > -105 ~ Sv_q0.95_median)) %>%
-  arrange(year, area, depth) %>%
-  mutate(area=factor(if_else(area=="BF_CAA", "Beaufort Sea &\nCan. Arctic Archipelago",
-                       if_else(area=="BB", "Baffin Bay",
-                       if_else(area=="SV", "Svalbard","Other"))),
-                       levels=c("Beaufort Sea &\nCan. Arctic Archipelago","Baffin Bay","Svalbard"))) %>%
+  arrange(year, IHO_area, depth) %>%
+  # mutate(area = factor(if_else(area == "BF_CAA", "Beaufort Sea &\nCan. Arctic Archipelago",
+  #                      if_else(area == "BB", "Baffin Bay",
+  #                      if_else(area == "SV", "Svalbard", "Other"))),
+  #                      levels = c("Beaufort Sea &\nCan. Arctic Archipelago", "Baffin Bay", "Svalbard"))) %>%
   # Plot
   ggplot() +
   geom_vline(xintercept = 200, lty = 2, col = "grey20") +
@@ -379,7 +414,7 @@ Sv_grid_laea %>% # Plot median profiles
   scale_color_manual(values = col_pal) +
   scale_fill_manual(values = col_pal) +
   coord_flip(ylim = c(-105, -65)) +
-  facet_grid(~ area) +
+  facet_grid(~ IHO_area) +
   theme(legend.title = element_blank(),
         legend.position = c(0.94, 0.275),
         legend.background = element_blank(),
